[package]
name = "LitExplorer"
version = "0.1.0"
edition = "2024"

[dev-dependencies]
tempfile = "3.22.0"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
crossterm = "0.29.0"
ratatui = "0.29.0"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34-deprecated"
toml = "0.9.6"
walkdir = "2.5.0"
